# bodhi-sims

./: README.md  example.py  mydatabase.db  mydatabase.db-shm  mydatabase.db-wal  pyproject.toml  schema.prisma
.storage/: duck.db
None/: cache.db-shm  cache.db-wal
docs/: DATAMODEL.md  README.md
notebooks/: convert.py  live_create.py  live_create.py.backup  sql_express.py  weakref.ipynb
notebooks/order_management/instruments/: instrument.py
notebooks/order_management/wallets/: ledger.py
notebooks/playgrounds/: ground1.py  groupby.ipynb  groupby.py
py_svm/: __init__.py  typings.py
py_svm/core/: __init__.py  agent.py  base.py  clock.py  component.py  registry.py
py_svm/environments/: agent.py  datacollection.py  model.py  space.py  time.py
py_svm/scripts/: partial_types.py
py_svm/synk/: README.md  abc.py  abc.py.backup  clock.py  main.py  models.py  module.py  storage.py
py_svm/synk/abcs/: __init__.py  actions.py  agent.py  base.py  behavior.py  client.py  context.py  db.py  engine.py  equipment.py  module.py  resource.py
py_svm/synk/backends/: disk_property.py  sql.py  surreal.py
py_svm/templates/: count.sur.j2  create_object.sur.j2  delete_one.sur.j2  find_unique.sur.j2  latest.sur.j2  latest_by.sur.j2  many.sur.j2  save.sur.j2
py_svm/utils/: __init__.py  decorators.py  hooks.py  refs.py
svm-rs/: Cargo.toml  pyproject.toml
svm-rs/.cargo/: config.toml
svm-rs/examples/: cellular.rs
svm-rs/src/: kv.rs  lib.rs
svm-rs/src/accounts/: mod.rs
svm-rs/src/economics/: accounts.rs  contract.rs  mod.rs
svm-rs/src/engine/: mod.rs
svm-rs/tests/: tests.rs
tests/: test_py_svm.py
