[package]
name = "svm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "svm_rs"
crate-type = ["cdylib"]

[dependencies]
coerce = "0.6.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
serde = { version = "1.0.140", features = ["derive", "alloc"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.56"
opentelemetry = "0.17.0"
tracing-subscriber = "0.3.15"
opentelemetry-jaeger = "0.16.0"
tracing-opentelemetry = "0.17.4"
coerce-macros = "0.1.0"
tracing = "0.1.35"
serde_json = "1.0.82"
lazy_static = "1.4.0"
hashbrown = "0.12.3"
rand = "0.8.5"
rusty-money = { version = "0.4.1", features = ["crypto"] }
chrono = { version = "0.4.19", features = ["serde"] }
tui = { version = "0.18.0", features = ["serde"] }
crossterm = { version = "0.24.0", features = ["event-stream"] }
datafusion = "10.0.0"

# [[example]]
# name = "boolean" # examples/boolean.rs
